--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/dudeofawesome/musicly",
   "dependencies": {
-    "botkit": "0.0.15"
+    "botkit": "0.0.15",
+    "express": "^4.13.4"
   }
 }
