--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "body-parser": "1.15.0",
     "botkit": "0.0.15",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "nedb": "1.8.0"
   }
 }
