--- a/package.json
+++ b/package.json
@@ -25,9 +25,25 @@
   },
   "homepage": "https://github.com/dudeofawesome/musicly",
   "dependencies": {
+    "bluebird": "^3.4.0",
     "body-parser": "1.15.0",
     "botkit": "0.0.15",
+    "chalk": "^1.1.3",
     "express": "^4.13.4",
-    "nedb": "1.8.0"
+    "gulp": "^3.9.1",
+    "nedb": "1.8.0",
+    "run-sequence": "^1.2.1",
+    "rxjs": "^5.0.0-beta.9",
+    "source-map-support": "^0.4.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "del": "^2.2.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.6",
+    "mocha": "^2.5.3",
+    "typescript": "^1.9.0-dev.20160616-1.0",
+    "typings": "^1.3.0"
   }
 }
