--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "musicly",
   "version": "0.0.1",
   "description": "Music queueing robot",
-  "main": "main.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if [ \"$DEPLOY\" = \"true\" ] ;then node build; fi",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "typings install"
   },
   "repository": {
     "type": "git",
@@ -31,7 +33,9 @@
     "chalk": "^1.1.3",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
+    "inversify": "^2.0.0-beta.8",
     "nedb": "1.8.0",
+    "reflect-metadata": "^0.1.3",
     "run-sequence": "^1.2.1",
     "rxjs": "^5.0.0-beta.9",
     "source-map-support": "^0.4.0"
@@ -42,7 +46,9 @@
     "gulp-mocha": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
+    "inversify-dts": "^1.0.5",
     "mocha": "^2.5.3",
+    "tslint": "^3.11.0",
     "typescript": "^1.9.0-dev.20160616-1.0",
     "typings": "^1.3.0"
   }
