--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,6 @@
 {
     "esversion": 6,
+
     "loopfunc": true,
     "node": true,
 
@@ -9,6 +10,8 @@
     "undef": true,
     "unused": true,
     "trailing": true,
+
+    "-W041": false,
 
     "globals": {
         "google": false,
